test/errors/type/collections/set/__eq3.yasl
echo mt.lookup(collections.set(), .__eq)(1, true)
